[tool.poetry]
name = "pizzarepo"
version = "0.1.0"
description = "Getting on with pizza"
authors = ["mic"]
license = "CC-BY-NC-ND"

[tool.poetry.dependencies]
python = "^3.10"
myst-parser = "^0.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
